--- a/nest-social-app/package.json
+++ b/nest-social-app/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.0",
@@ -28,6 +29,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "mongoose": "^7.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
